deployments/kubernetes/gallifrey/backend/.infra/elasticsearch-deployment copy.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  namespace: gallifrey
  name: logstash
spec:
  selector:
    matchLabels:
      app: logstash
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        # Pulls the default logstash image from Docker Hub
        image: nicokahlert/gallifrey-logstash-mysql-exporter
        args:
        - -f
        - /usr/share/logstash/pipeline/logstash.conf
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 10Mi
        ports:
        - name: logstash
          containerPort: 5044
          protocol: TCP
        volumeMounts:
        - name: logstash-persistent-storage # must match the volume name, above
          mountPath: /usr/share/logstash/config/logstash.yml
          subPath: logstash.yml
          readOnly: true
        - name: pipeline
          mountPath: /usr/share/logstash/pipeline
          readOnly: true
      volumes:
      - name: logstash-persistent-storage
        persistentVolumeClaim:
          configMap: logstash-config
