deployments/kubernetes/gallifrey/backend/.infra/logstash-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  namespace: gallifrey
  name: logstash
spec:
  selector:
    matchLabels:
      app: logstash
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        # Pulls the default logstash image from Docker Hub
        image: nicokahlert/gallifrey-logstash-mysql-exporter@sha256:e95690a67f7e748eccf15e2a6a802610f166ce7159f85c0ab3621d7f38ff7b0d
        args:
        - -f
        - /usr/share/logstash/pipeline/logstash.conf
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 10Mi
        ports:
        - name: logstash
          containerPort: 5044
          protocol: TCP
