deployments/kubernetes/gallifrey/backend/.infra/elasticsearch-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: gallifrey
spec:
  ports:
  - name: rest
    port: 9200
    targetPort: rest
  - name: repl
    port: 9300
    targetPort: repl
  selector:
    app: elasticsearch
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  namespace: gallifrey
  name: elasticsearch
spec:
  selector:
    matchLabels:
      app: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        # Pulls the default elasticsearch image from Docker Hub
        image: elasticsearch:6.8.5
        ports:
        - name: rest
          containerPort: 9200
        - name: repl
          containerPort: 9300
        volumeMounts:
        - name: elasticsearch-persistent-storage # must match the volume name, above
          mountPath: "/usr/share/elasticsearch/data"
      volumes:
      - name: elasticsearch-persistent-storage
        persistentVolumeClaim:
          claimName: elasticsearch-claim
