deployments/kubernetes/gallifrey/backend/.infra/minio-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: gallifrey
spec:
  ports:
  - port: 9000
  selector:
    app: minio
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  namespace: gallifrey
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        # Pulls the default MinIO image from Docker Hub
        image: minio/minio
        args:
        - server
        - /storage
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: minio-persistent-storage # must match the volume name, above
          mountPath: "/storage"
      volumes:
      - name: minio-persistent-storage
        persistentVolumeClaim:
          claimName: s3-claim
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s3-ingress
  namespace: gallifrey
spec:
  rules:
  - host: s3.gallifrey.local
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
