deployments/kubernetes/gallifrey/backend/.infra/oauth-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  rules:
  - host: auth.gallifrey.local
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak-1574510254-http
          servicePort: http
